--- a/date assets/styles.css
+++ b/date assets/styles.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     width: 100%;
     max-width: 600px;
+    width: 500px;
     margin-inline: auto;
     filter: drop-shadow(5px 5px 20px rgba(0, 0, 0, 0.2));
 }
