--- a/date assets/styles.css
+++ b/date assets/styles.css
@@ -20,8 +20,7 @@ body {
 .header-img {
     display: flex;
     width: 100%;
-    max-width: 600px;
-    width: 500px;
+    max-width: 100%;
     margin-inline: auto;
     filter: drop-shadow(5px 5px 20px rgba(0, 0, 0, 0.2));
 }
